Closed Bug 1694139 Opened 5 years ago Closed 5 years ago

Mixed content download protection creates but doesn't clean up second file

Categories

(Core :: DOM: Security, defect, P2)

defect

Tracking

()

VERIFIED FIXED
89 Branch
Tracking Status
firefox89 --- verified

People

(Reporter: juliana, Assigned: juliana)

References

(Blocks 2 open bugs)

Details

(Whiteboard: [domsecurity-active])

Attachments

(2 files)

Attached image image.png

When the mixed content download protection halts a download, there are two files. The first is an empty file, that will contain the downloaded data when the download is allowed or gets deleted if not.
The second file ends with .part, which is a couple of KB big, and doesn't get cleaned up in either scenario.

STR:

  1. Turn off HTTPS-Only Mode (if enabled)
  2. Go here https://www.thinkbroadband.com/download
  3. Download one of the files
  4. allow the file to be downloaded in the panel (or reject it)

Expected result:

There is either one file (the downloaded one) or no new files in the downloads directory.

Actual result:

A .part file is also in the downloads directory.

Assignee: nobody → julianwels
Severity: -- → S2
Status: NEW → ASSIGNED
Priority: -- → P2
Whiteboard: [domsecurity-active]
Attachment #9211037 - Attachment description: WIP: Bug 1694139 - Remove .part-files when download is canceled by mixed download protection. → Bug 1694139 - Remove .part-files when download is canceled by mixed download protection.
Blocks: 1702544
Pushed by archaeopteryx@coole-files.de: https://hg.mozilla.org/integration/autoland/rev/df4e293c71b9 Remove .part-files when download is canceled by mixed download protection. r=mak
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 89 Branch

Reproduced the initial issue with Firefox 89.0a1 (20210222214056) on Windows 10x64.
The issue is verified fixed with Firefox 89.0b3 (20210422190146) on Windows 10x64, macOS 11.2.3 and Ubuntu 20. The .part file is removed after the download with HTPS disabled.

Status: RESOLVED → VERIFIED
Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: