Bug 1694139 - Remove .part-files when download is canceled by mixed download protection. r=mak

Differential Revision: https://phabricator.services.mozilla.com/D109506